<resources>
    <string name="app_name">A2101015270</string>
    <string name="app_logo">App Logo</string>
    <string name="don_t_have_an_account_create_now">Don\'t have an account? Create now</string>
    <string name="please_select_the_either_doctor_nurse">Please select the either Doctor/Nurse</string>
    <string name="login">Login</string>
    <string name="create_new_test">CREATE NEW TEST</string>
    <string name="create_new_patient">Create New Patient</string>
    <string name="list_of_all_patients_in_the_database_click_on_any_patient_to_view_details">List of all patients by firstname. Click on any patient to view details.</string>
    <string name="list_of_all_test_in_the_database_click_on_any_patient_to_view_details">List of all test by patient. Click on any test to view details.</string>
    <string name="department">Department</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="room">Room</string>
    <string name="add_patient">Add Patient</string>
    <string name="add_new_test">Add New Test</string>
    <string name="bpl">BPL</string>
    <string name="bph">BPH</string>
    <string name="temperature">Temperature</string>
    <string name="add_test">Add Test</string>
    <string name="select_assigned_patient_from_the_dropdown">Select assigned patient from the dropdown</string>
    <string name="patient_details">Patient Details</string>
    <string name="test_details">Test Details</string>
    <string-array name="doctor_nurse">
        <item>Doctor</item>
        <item>Nurse</item>
    </string-array>
</resources>
