<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vishv.a2101015270.RegisterActivity">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/please_select_the_either_doctor_nurse"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/register_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:entries="@array/doctor_nurse" />

    <EditText
        android:id="@+id/register_firstnane_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_lastname_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/register_firstnane_txt"
        android:layout_below="@+id/register_firstnane_txt"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_username_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:layout_alignStart="@+id/register_lastname_txt"
        android:layout_below="@+id/register_lastname_txt"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/register_username_txt"
        android:layout_below="@+id/register_username_txt"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/register_department_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:layout_alignEnd="@+id/register_password_txt"
        android:layout_below="@+id/register_password_txt"
        android:ems="10"
        android:hint="@string/department"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/register_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat"
        android:layout_below="@+id/register_department_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/register" />
</RelativeLayout>
