<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vishv.a2101015270.LoginActivity">


    <EditText
        android:id="@+id/login_username_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_username_txt"
        android:layout_below="@+id/login_username_txt"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_txt"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="42dp"
        android:text="@string/login" />

    <Spinner
        android:id="@+id/login_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_password_txt"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:layout_marginBottom="71dp"
        android:entries="@array/doctor_nurse" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat"
        android:text="@string/please_select_the_either_doctor_nurse" />
</RelativeLayout>
